# mozjpeg

./: .gitattributes  .gitauthors  .gitignore  .travis.yml  Android.mk  BUILDING.md  BUILDING.txt  Brewfile  CHANGELOG  CMakeLists.txt  ChangeLog-mozilla.txt  ChangeLog.md  ChangeLog.txt  LICENSE.md  LICENSE.txt  Makefile.am  Makefile.in  README  README-mozilla.txt  README-turbo.txt  README.arithmetic  README.ijg  README.md  README_TightVNC.txt  SECURITY.md  SETUP  TODO  USAGE  acinclude.m4  aclocal.m4  ansi2knr.c  appveyor.yml  architecture  bmp.c  cderror.h  cdjpeg.c  cdjpeg.h  cjpeg.1  cjpeg.c  ckconfig.c  (+358 more)
.github/: CONTRIBUTING.md  FUNDING.yml  SECURITY.md
altui/: README.alt  cjpeg.c  djpeg.c  usage.alt
android/: jconfig.h  jconfigint.h
ci/: deploy_ljt.enc  keys.enc
cmakescripts/: BuildPackages.cmake  GNUInstallDirs.cmake  cmake_uninstall.cmake.in  testclean.cmake  tjbenchtest.cmake
fuzz/: CMakeLists.txt  build.sh  cjpeg.cc  cjpeg12.cc  cjpeg16.cc  compress.cc  compress12.cc  compress12_lossless.cc  compress16_lossless.cc  compress_lossless.cc  compress_yuv.cc  decompress.c  decompress.cc  decompress_yuv.c  decompress_yuv.cc  transform.c  transform.cc
java/: CMakeLists.txt  Makefile.am  README  TJ.h  TJBench.java  TJCompressor.h  TJDecompressor.h  TJExample.java  TJUnitTest.java  TurboJPEG.java  org_libjpegturbo_turbojpeg_TJ.h  org_libjpegturbo_turbojpeg_TJCompressor.h  org_libjpegturbo_turbojpeg_TJDecompressor.h  org_libjpegturbo_turbojpeg_TJTransformer.h  tjCompressor.h  tjDecompressor.h  tjexample.java  turbojpeg.java
java/doc/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  serialized-form.html
java/doc/org/libjpegturbo/turbojpeg/: TJ.ScalingFactor.html  TJ.html  TJCompressor.html  TJCustomFilter.html  TJDecompressor.html  TJException.html  TJScalingFactor.html  TJTransform.html  TJTransformer.html  YUVImage.html  package-frame.html  package-summary.html  package-tree.html
java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJDecompressor.java  TJException.java  TJHeaderInfo.java  TJLoader-unix.java.in  TJLoader.java  TJLoader.java.in  TJLoader.java.tmpl  TJScalingFactor.java  TJTransform.java  TJTransformer.java  YUVImage.java
md5/: Makefile.am  md5.c  md5.h  md5cmp.c  md5hl.c
release/: Description.plist.in  Distribution.xml  Info.plist.in  makerpm  (+36 more)
sharedlib/: CMakeLists.txt
simd/: CMakeLists.txt  Makefile.am  jcclrmmx.asm  jcclrss2-64.asm  jcclrss2.asm  jccolext-altivec.c  jccolext-avx2-64.asm  jccolext-avx2.asm  jccolext-sse2-64.asm  jccolext-sse2.asm  jccolmmx.asm  jccolor-altivec.c  jccolor-avx2-64.asm  jccolor-avx2.asm  jccolor-mmx.asm  jccolor-sse2-64.asm  jccolor-sse2.asm  jccolss2-64.asm  jccolss2.asm  jcgrammx.asm  jcgrass2-64.asm  jcgrass2.asm  jcgray-altivec.c  jcgray-avx2-64.asm  jcgray-mmx.asm  jcgray-sse2-64.asm  jcgray-sse2.asm  jcgryext-altivec.c  jcgryext-avx2-64.asm  jcgryext-avx2.asm  jcgryext-sse2-64.asm  jcgryext-sse2.asm  jcgrymmx.asm  jcgryss2-64.asm  jcgryss2.asm  jchuff-sse2-64.asm  jchuff-sse2.asm  jcolsamp.inc  jcqnt3dn.asm  jcqntmmx.asm  (+129 more)
simd/arm/: jccolor-neon.c  jcgray-neon.c  jcgryext-neon.c  jchuff.h  jcphuff-neon.c  jcsample-neon.c  jdcolext-neon.c  jdcolor-neon.c  jdmerge-neon.c  jdmrgext-neon.c  jdsample-neon.c  jfdctfst-neon.c  jfdctint-neon.c  jidctfst-neon.c  jidctint-neon.c  jidctred-neon.c  jquanti-neon.c  jsimd.c  jsimd_neon.S  neon-compat.h.in
simd/arm/aarch32/: jccolext-neon.c  jchuff-neon.c  jsimd.c  jsimd_neon.S
simd/arm/aarch64/: jccolext-neon.c  jchuff-neon.c  jsimd.c  jsimd_neon.S
simd/arm64/: jsimd.c  jsimd_neon.S
simd/i386/: jccolext-avx2.asm  jccolext-mmx.asm  jccolext-sse2.asm  jccolor-avx2.asm  jccolor-mmx.asm  jccolor-sse2.asm  jcgray-avx2.asm  jcgray-mmx.asm  jcgray-sse2.asm  jcgryext-avx2.asm  jcgryext-mmx.asm  jcgryext-sse2.asm  jchuff-sse2.asm  jcphuff-sse2.asm  jcsample-avx2.asm  jcsample-mmx.asm  jcsample-sse2.asm  jdcolext-avx2.asm  jdcolext-mmx.asm  jdcolext-sse2.asm  jdcolor-avx2.asm  jdcolor-mmx.asm  jdcolor-sse2.asm  jdmerge-avx2.asm  jdmerge-mmx.asm  jdmerge-sse2.asm  jdmrgext-avx2.asm  jdmrgext-mmx.asm  jdmrgext-sse2.asm  jdsample-avx2.asm  jdsample-mmx.asm  jdsample-sse2.asm  jfdctflt-3dn.asm  jfdctflt-sse.asm  jfdctfst-mmx.asm  jfdctfst-sse2.asm  jfdctint-avx2.asm  jfdctint-mmx.asm  jfdctint-sse2.asm  jidctflt-3dn.asm  (+17 more)
simd/i386-mmx/: jccolor.asm  jcgray.asm  jdcolor.asm  jdmerge.asm
simd/i386-sse2/: jccolor.asm  jcgray.asm  jdcolor.asm  jdmerge.asm
simd/loongson/: jccolext-mmi.c  jccolor-mmi.c  jcgryext-mmi.c  jcsample-mmi.c  jdcolext-mmi.c  jdcolor-mmi.c  jdmrgext-mmi.c  jdsample-mmi.c  jfdctint-mmi.c  jidctint-mmi.c  jquanti-mmi.c  jsimd.c  jsimd_mmi.h  loongson-mmintrin.h
simd/mips/: jsimd.c  jsimd_dspr2.S  jsimd_dspr2_asm.h
simd/mips64/: jsimd.c  jsimd_mmi.h
simd/nasm/: jdct.inc  jsimdext.inc
simd/powerpc/: jccolext-altivec.c  jccolor-altivec.c  jcgray-altivec.c  jcgryext-altivec.c  jcsample-altivec.c  jcsample.h  jdcolext-altivec.c  jdcolor-altivec.c  jdmerge-altivec.c  jdmrgext-altivec.c  jfdctfst-altivec.c  jfdctint-altivec.c  jidctfst-altivec.c  jidctint-altivec.c  jquanti-altivec.c  jsimd.c  jsimd_altivec.h
simd/x86_64/: jccolext-avx2.asm  jccolext-sse2.asm  jccolor-avx2.asm  jccolor-sse2.asm  jcgray-avx2.asm  jcgray-sse2.asm  jcgryext-avx2.asm  jcgryext-sse2.asm  jchuff-sse2.asm  jcphuff-sse2.asm  jcsample-avx2.asm  jcsample-sse2.asm  jdcolext-avx2.asm  jdcolext-sse2.asm  jdcolor-avx2.asm  jdcolor-sse2.asm  jdmerge-avx2.asm  jdmerge-sse2.asm  jdmrgext-avx2.asm  jdmrgext-sse2.asm  jdsample-avx2.asm  jdsample-sse2.asm  jfdctflt-sse.asm  jfdctfst-sse2.asm  jfdctint-avx2.asm  jfdctint-sse2.asm  jidctflt-sse2.asm  jidctfst-sse2.asm  jidctint-avx2.asm  jidctint-sse2.asm  jidctred-sse2.asm  jquantf-sse2.asm  jquanti-avx2.asm  jquanti-sse2.asm  jsimd.c  jsimdcpu.asm
simd/x86_64-sse2/: jccolor.asm  jcgray.asm  jdcolor.asm  jdmerge.asm
(+79 files in other folders)
